[gd_scene load_steps=21 format=2]

[ext_resource path="res://Backgrounds/Study/Study.png" type="Texture" id=1]
[ext_resource path="res://Backgrounds/Study/CirqueDuSoleilPoster.png" type="Texture" id=2]
[ext_resource path="res://Backgrounds/Study/Cards.png" type="Texture" id=3]
[ext_resource path="res://Backgrounds/Study/Piano.png" type="Texture" id=4]
[ext_resource path="res://Backgrounds/Study/WindowStudy.png" type="Texture" id=5]
[ext_resource path="res://John/John.tscn" type="PackedScene" id=6]
[ext_resource path="res://Backgrounds/Study/Safe.png" type="Texture" id=7]
[ext_resource path="res://Backgrounds/Study/Harlequin2.png" type="Texture" id=8]
[ext_resource path="res://Backgrounds/Study/Harlequin1.png" type="Texture" id=9]
[ext_resource path="res://Entities/Harlequinsprite.tscn" type="PackedScene" id=10]
[ext_resource path="res://House/Study.gd" type="Script" id=11]
[ext_resource path="res://Backgrounds/Study/Desk.png" type="Texture" id=12]
[ext_resource path="res://Backgrounds/Study/WindowViewStudy.jpg" type="Texture" id=13]
[ext_resource path="res://Backgrounds/Study/Showtime.jpg" type="Texture" id=14]
[ext_resource path="res://Backgrounds/Study/SeriousJester.jpg" type="Texture" id=15]
[ext_resource path="res://House/ShowView.gd" type="Script" id=16]
[ext_resource path="res://Audio/Showtime.ogg" type="AudioStream" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 21 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 60 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 58, 72 )

[node name="Study" type="Node2D"]
script = ExtResource( 11 )
map_size = Vector2( 1482, 1067 )

[node name="Map" type="Node2D" parent="."]

[node name="Study" type="StaticBody2D" parent="Map"]
z_index = -4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Map/Study"]
texture = ExtResource( 1 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Study"]
visible = false
polygon = PoolVector2Array( 4, 709, 35, 770, 206, 857, 272, 830, 766, 1067, 1475, 705, 1439, 664, 766, 1007, 266, 773, 204, 802, 35, 717, 79, 697, 40, 670, 685, 407, 1422, 662, 1476, 695, 1474, 211, 677, 0, 4, 227 )

[node name="CirqueDuSoleilPoster" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 87, 68 )
texture = ExtResource( 2 )
centered = false

[node name="InteractArea" type="Area2D" parent="Map/CirqueDuSoleilPoster"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/CirqueDuSoleilPoster/InteractArea"]
polygon = PoolVector2Array( 4, 512, 4, 190, 546, 4, 547, 165, 377, 231, 374, 351 )

[node name="Cards" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 126, 600 )
texture = ExtResource( 3 )
centered = false

[node name="InteractArea" type="Area2D" parent="Map/Cards"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Cards/InteractArea"]
polygon = PoolVector2Array( 18, 114, 1, 53, 137, -9, 293, 17, 301, 102, 238, 148, 40, 126 )

[node name="PianoArea" type="StaticBody2D" parent="Map"]
position = Vector2( 460, 104 )

[node name="Sprite" type="Sprite" parent="Map/PianoArea"]
texture = ExtResource( 4 )
centered = false

[node name="Piano" type="Node2D" parent="Map/PianoArea" groups=[
"Interactables",
]]
z_index = -3

[node name="InteractArea" type="Area2D" parent="Map/PianoArea/Piano"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/PianoArea/Piano/InteractArea"]
polygon = PoolVector2Array( 1.99997, 390, 1.99997, 192, 229, 121, 298, 133, 309, 211, 319, 215, 318, 230, 337, 237, 334, 255, 286, 278, 284, 302, 313, 320, 312, 339, 298, 342, 285, 335, 120, 407, 120, 423, 104, 431 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/PianoArea"]
polygon = PoolVector2Array( 102, 428, 309, 338, 313, 314, 261, 283, 0.999969, 385 )

[node name="PipePiano" type="Node2D" parent="Map/PianoArea" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/PianoArea/PipePiano"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/PianoArea/PipePiano/InteractArea"]
position = Vector2( 54, 189 )
shape = SubResource( 1 )

[node name="HarlequinStatuePiano" type="Node2D" parent="Map/PianoArea" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/PianoArea/HarlequinStatuePiano"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/PianoArea/HarlequinStatuePiano/InteractArea"]
position = Vector2( 152, 119 )
shape = SubResource( 2 )

[node name="Joker" type="Node2D" parent="Map/PianoArea" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/PianoArea/Joker"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/PianoArea/Joker/InteractArea"]
position = Vector2( 246, 69 )
shape = SubResource( 3 )

[node name="WindowStudy" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 967, 144 )
texture = ExtResource( 5 )
centered = false

[node name="InteractArea" type="Area2D" parent="Map/WindowStudy"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/WindowStudy/InteractArea"]
polygon = PoolVector2Array( 1, 276, 1, 254, 24, 242, 25, 3, 40, 0, 176, 38, 177, 320, 159, 328 )

[node name="HarlequinPosterStudy2" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 787, 157 )
texture = ExtResource( 8 )
centered = false

[node name="InteractArea" type="Area2D" parent="Map/HarlequinPosterStudy2"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/HarlequinPosterStudy2/InteractArea"]
polygon = PoolVector2Array( 22, 152, 0, 10, 106, 0, 129, 143 )

[node name="HarlequinPosterStudy1" type="Sprite" parent="Map" groups=[
"Interactables",
]]
position = Vector2( 1211, 204 )
texture = ExtResource( 9 )
centered = false

[node name="InteractArea" type="Area2D" parent="Map/HarlequinPosterStudy1"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/HarlequinPosterStudy1/InteractArea"]
polygon = PoolVector2Array( 158, 363, 206, 383, 213, 62, 2, -2, 3, 194, 155, 250 )

[node name="YSort" type="YSort" parent="Map"]

[node name="SafeArea" type="StaticBody2D" parent="Map/YSort"]
position = Vector2( 1204, 688 )

[node name="Sprite" type="Sprite" parent="Map/YSort/SafeArea"]
position = Vector2( -123, -378 )
texture = ExtResource( 7 )
centered = false

[node name="Safe" type="Node2D" parent="Map/YSort/SafeArea" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/YSort/SafeArea/Safe"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/SafeArea/Safe/InteractArea"]
polygon = PoolVector2Array( -120, -15, -120, -220, 17, -281, 160, -232, 168, -35, 6, 43 )

[node name="HarlequinStatueSafe" type="Node2D" parent="Map/YSort/SafeArea" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/YSort/SafeArea/HarlequinStatueSafe"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/SafeArea/HarlequinStatueSafe/InteractArea"]
polygon = PoolVector2Array( -55, -210, -62, -236, -28, -285, -67, -283, -97, -324, -72, -342, -47, -338, -56, -383, -26, -388, 0, -346, 36, -335, 59, -286, 40, -272, 34, -218, -13, -205 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/YSort/SafeArea"]
polygon = PoolVector2Array( -125, -17, 8, 49, 178, -41, 28, -95 )

[node name="John" parent="Map/YSort" instance=ExtResource( 6 )]
position = Vector2( 185, 712 )

[node name="Harlequinsprite" parent="Map/YSort" instance=ExtResource( 10 )]
position = Vector2( 877, 415 )

[node name="DeskArea" type="StaticBody2D" parent="Map"]

[node name="Sprite" type="Sprite" parent="Map/DeskArea"]
position = Vector2( 438, 482 )
texture = ExtResource( 12 )
centered = false

[node name="Peanuts" type="Node2D" parent="Map/DeskArea" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/DeskArea/Peanuts"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/DeskArea/Peanuts/InteractArea"]
polygon = PoolVector2Array( 465, 641, 456, 611, 522, 592, 532, 622 )

[node name="SeriousJester" type="Node2D" parent="Map/DeskArea" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/DeskArea/SeriousJester"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/DeskArea/SeriousJester/InteractArea"]
polygon = PoolVector2Array( 695, 733, 708, 659, 803, 667, 790, 741 )

[node name="HatRack" type="Node2D" parent="Map/DeskArea" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/DeskArea/HatRack"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/DeskArea/HatRack/InteractArea"]
polygon = PoolVector2Array( 786, 928, 813, 951, 858, 951, 883, 929, 900, 920, 869, 724, 883, 710, 869, 666, 928, 639, 923, 557, 867, 563, 887, 529, 801, 513, 743, 471, 770, 593, 813, 602, 815, 895, 795, 905 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/DeskArea"]
polygon = PoolVector2Array( 444, 815, 726, 946, 782, 924, 837, 967, 885, 943, 880, 831, 568, 717, 444, 760 )

[node name="StudyExit" type="Node2D" parent="Map" groups=[
"Interactables",
]]

[node name="InteractArea" type="Area2D" parent="Map/StudyExit"]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/StudyExit/InteractArea"]
polygon = PoolVector2Array( 31, 770, 29, 719, 82, 695, 267, 775, 271, 829, 212, 863 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 1482, 1067 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StudyWindowView" type="TextureRect" parent="CanvasLayer" groups=[
"Views",
]]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
texture = ExtResource( 13 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeriousJesterView" type="TextureRect" parent="CanvasLayer" groups=[
"Views",
]]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
texture = ExtResource( 15 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowtimeView" type="TextureRect" parent="CanvasLayer" groups=[
"Views",
]]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
texture = ExtResource( 14 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
